infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: gadgetplus.dev
      http: 
        paths: 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: gadgetplus-service
                port:
                  number: 4000
